修复portal服务模块的部分服务空指针异常